fixed the overlapping issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 .sidebar {
   box-shadow: rgb(113 122 131 / 11%) 0px 7px 30px 0px;
+  z-index: 10;
 }
 .nav-item,
 .navbar {
